@@ -34,7 +34,7 @@ replace {
 	; Peephole 2a	- eliminated jmp
 	bcc	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bcc	%1
@@ -44,7 +44,7 @@ replace {
 	; Peephole 2b	- eliminated jmp
 	bcs	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	beq	%1
@@ -54,7 +54,7 @@ replace {
 	; Peephole 2c	- eliminated jmp
 	bne	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bne	%1
@@ -64,7 +64,7 @@ replace {
 	; Peephole 2d	- eliminated jmp
 	beq	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	brclr	%3,%2,%1
@@ -74,7 +74,7 @@ replace {
 	; Peephole 2e	- eliminated jmp
 	brset	%3,%2,%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	brset	%3,%2,%1
@@ -84,7 +84,7 @@ replace {
 	; Peephole 2f	- eliminated jmp
 	brclr	%3,%2,%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bls	%1
@@ -94,7 +94,7 @@ replace {
 	; Peephole 2g	- eliminated jmp
 	bhi	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bhi	%1
@@ -104,7 +104,7 @@ replace {
 	; Peephole 2h	- eliminated jmp
 	bls	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	ble	%1
@@ -114,7 +114,7 @@ replace {
 	; Peephole 2i	- eliminated jmp
 	bgt	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bgt	%1
@@ -124,7 +124,7 @@ replace {
 	; Peephole 2j	- eliminated jmp
 	ble	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bge	%1
@@ -134,7 +134,7 @@ replace {
 	; Peephole 2k	- eliminated jmp
 	blt	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	blt	%1
@@ -144,7 +144,7 @@ replace {
 	; Peephole 2l	- eliminated jmp
 	bge	%5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bmi     %1
@@ -154,7 +154,7 @@ replace {
 	; Peephole 2m   - eliminated jmp
 	bpl     %5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace {
 	bpl     %1
@@ -164,14 +164,14 @@ replace {
 	; Peephole 2n   - eliminated jmp
 	bmi     %5
 %1:
-} if labelInRange(), labelRefCountChange(%1 -1)
+} if labelInRange(%5), labelRefCountChange(%1 -1)
 
 replace restart {
 	jmp	%5
 } by {
 	; Peephole 3	- shortened jmp to bra
 	bra	%5
-} if labelInRange
+} if labelInRange(%5)
 
 replace {
 	lda	%1
@@ -211,14 +211,14 @@ replace {
 } by {
 	; Peephole 6a  - replaced jmp to rts with rts
 	rts
-} if optimizeReturn(), labelIsReturnOnly(), labelRefCountChange(%5 -1)
+} if optimizeReturn(), labelIsReturnOnly(%5), labelRefCountChange(%5 -1)
 
 replace {
 	bra	%5
 } by {
 	; Peephole 6b  - replaced jmp to rts with rts
 	rts
-} if optimizeReturn(), labelIsReturnOnly(), labelRefCountChange(%5 -1)
+} if optimizeReturn(), labelIsReturnOnly(%5), labelRefCountChange(%5 -1)
 
 replace restart {
 	psha
